syntax = "proto3";

package api.user.request;

message GetInfo {
    uint64 user_id = 1;
}
